# sbg-discord-bot

./: LICENSE  README.md  pyproject.toml
sbg_discord_bot/: main.py  responses.py
